--- a/css/style1.css
+++ b/css/style1.css
@@ -23,5 +23,5 @@ body {
   margin-left: -1.2em;
   width: 1em;
   height: 1em;
-  background-image: url("css/checkbox-off.svg");
+  background-image: url("../img/checkbox-off.svg");
 }
