--- a/css/style.css
+++ b/css/style.css
@@ -927,70 +927,149 @@ img {
 }
 
 .modal {
-  color: #000000;
-  background-color:#ffffff;
-  display: none;
+  position: fixed;
+  color:#000000;
+  background-color: #ffffff;
+  box-shadow: 0px 20px 40px rgba(0, 1, 1, 0.75);
+
+  left: 50%;
+  margin-left: -480px;
+  bottom: 180px;
+
+  padding: 73px 100px;
+
+  box-sizing: border-box;
+  width: 960px;
+  height: 590px;
 }
 
-.modal ul {
-  list-style: none;
+.modal-close {
+  position: absolute;
+  top: 78px;
+  right: 90px;
+
+  width: 21px;
+  height: 21px;
+
+  background-color:#ffffff;
+  border: 0;
+
+  cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  width: 19px;
+  height: 3px;
+
+  background-color: red;
+  opacity: 0.3;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.modal-close:hover::before,
+.modal-close:hover::after{
+  background-color: red;
+  opacity: 1.0;
+}
+
+.modal-close:active::before,
+.modal-close:active::after {
+  background-color: red;
+  opacity: 0.1;
+  border:none;
 }
 
 .modal h2 {
+  box-sizing: border-box;
+  margin: 0;
+  margin-bottom: 50px;
+
   font-size: 45px;
   line-height: 45px;
-  text-align:left;
+  
 }
 
-.modal-letter-lable {
+.modal label {
+  display: block;
+  margin-bottom: 12px;
+
   font-size: 16px;
   line-height: 18px;
-  font-weight: 700;
-  color:white;
+  font-weight: 500;
 }
 
-.modal-letter-input {
+.first-line {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+
+.letter input[type="text"]{
+  box-sizing: border-box;
+  width: 360px;
+  padding: 10px 15px;
+
+   
+  font-family: "Roboto", "Arial", sans-serif;
+  text-transform: none;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
   color:rgba(68, 68, 68, 0.5);
-  text-transform: none;
-
-  background-color: #ffffff;
-  border: 2px inset #d7dcde;
+  border: 2px solid #d7dcde;
 }
 
-.modal-letter-input:hover, 
-.modal-letter-input:focus {
-  color:rgba(68, 68, 68, 0.5);
-  border: 2px inset #b4b9bb
+.letter input:hover{
+  border: 2px solid #b4b9bb;
 }
 
-.modal-letter-input:active {
-  columns: #444444;
-  border: 2px inset #000000;
+.letter input:focus{
+  border: 2px solid #000000;
+  color: #444444;
+}
+.letter-text {
+  box-sizing: border-box;
+  width: 760px;
+  padding: 10px 15px;
+  
+  font-family: "Roboto", "Arial", sans-serif;
+  
+  height: 118px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  color: rgba(68, 68, 68, 0.5);
+  border: 2px solid #d7dcde;
 }
 
-.box-modal-letter {
-  width: 960px;
-  height: 590px;
-  box-shadow: inset 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
+.letter-text:hover{
+  border: 2px solid #b4b9bb;
+}
+
+.letter-text:focus{
+  border: 2px solid #000000;
+  color: #444444;
 }
 
 .letter-button {
-  font-weight: 500;
-  text-align: center;
-  width: 260px;
+  box-sizing: border-box;
+  width: 250px;
+  height: 50px;
+  margin-top: 45px;
 }
-
-.letter-button:hover,
-.letter-button:focus {
-  background-color: #e74246;
-}
-
-.letter-button:active {
-  background-color: #d7373b;
-  color: rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0px 3px 0px 0px rgba(0, 1, 1, 0.1);
-}
-
